# ironforest

./: .gitignore  Cargo.toml  README.md  changelog.md  ironforest.py  ironforest.pyi  pyproject.toml  substratum.pyi  tmpclaude-297b-cwd
.github/workflows/: publish.yml
benchmarks/: copy_vs_zero_copy.py  spatial_decision_tree.py  spectral_vs_rp.py  stochastic_vs_deteministic_ann.py  tree_comparison.py
docs/: aggregate_tree.md  spatial.md
examples/: readme.py
py/ironforest/: __init__.py  _core.pyi  isolation_forest.py  models.py  models.pyi  random_forest.py  random_forest.pyi
python/ironforest/: __init__.py  linear_regression.py
python/substratum/: __init__.py
src/: iron_float.rs  lib.rs
src/array/: constructors.rs  linalg.rs  mod.rs  ndarray.rs  shape.rs  stats.rs  storage.rs  strided_iter.rs
src/linalg/: basic.rs  decomposition.rs  mod.rs  solve.rs
src/ops/: arithmetic.rs  scalar.rs  unary.rs
src/projection/: random_projection.rs
src/python/: array.rs  benchmark.py  bindings_test.py  linalg.rs  mod.rs  ndutils.rs  python.rs  random.rs  spatial.rs  spatial_index.rs  stats.rs  tree_benchmark.py  tree_engine.rs
src/random/: .gitignore  generator.rs  mod.rs  seed.rs
src/spatial/: agg_tree.rs  ball_tree.rs  brute_force.rs  common.rs  kd_tree.rs  m_tree.rs  mod.rs  (+7 more)
substratum/: Cargo.toml
tests/: agg_tree_benchmark.py  bindings_test.py  conftest.py  correctness_test.py  heatmap.py  readme_tests.py  test_f32.py  test_models.py  test_spatial.py  test_zero_copy.py  tree_benchmark.py  tree_correctness_test.py  zero_copy.py
workflows/: publish.yml
(+29 files in other folders)
