[package]
name = "ironforest"
version = "0.7.0"
edition = "2024"

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]


[dependencies]
pyo3 = { version = "0.27.2", features = ["multiple-pymethods"] }
numpy = "0.27"
rayon = "1.10"
serde = {version = "1.0.228", features = ["derive"]}
rmp-serde = "1.3.1"
num-traits = "0.2.19"

